Remove Note: prefixes

--- a/app/views/how_often_email.html
+++ b/app/views/how_often_email.html
@@ -21,7 +21,7 @@
 					  </h1>
 				  </legend>
 				  {%if data['typeofalert'].includes('Emergency or incident in the country')%}
-				  <p>Note: Emergency updates will be sent immediately, as they occur.</p>
+				  <p>Emergency updates will be sent immediately, as they occur.</p>
 				  <h2 class="govuk-heading-m">How often would you like to receive the other types of update that you have selected?</h2>
 				  {% endif %}
 				  <div class="govuk-radios govuk-radios">
