--- a/app/views/country.html
+++ b/app/views/country.html
@@ -55,7 +55,7 @@
 							{% endfor %}
 						</select>
 						<div id="my-autocomplete-container"></div>
-						<button class="govuk-button" data-module="govuk-button">Add to list</button>
+						<button class="govuk-button govuk-button--secondary" data-module="govuk-button">Add to list</button>
 					</div>
 				</form>
 			</div>
