--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -114,7 +114,7 @@
           </dt>
           <dd class="govuk-summary-list__value">
 			  {% for type in data['typeofalert'] %}
-			  <p>{{type}}</p>
+			  {% if type !== 'Travel advice' %}<p>{{type}}</p>{% endif %}
 			  {% endfor %}
           </dd>
           <dd class="govuk-summary-list__actions">
@@ -134,7 +134,7 @@
           </dt>
           <dd class="govuk-summary-list__value">
 			  {%if data['typeofalert'].includes('Emergency or incident in the country')%}
-			  Emergency updates will be sent as they occur.
+			  Emergency updates will be sent as they occur
 			  <br />
 			  Other updates will be sent:
 			  {% endif %}
