--- a/app/views/choose_channels.html
+++ b/app/views/choose_channels.html
@@ -19,7 +19,9 @@
 				</span>
 			</summary>
 			<div class="govuk-details__text">
-				Selecting more than one option could help ensure you receive an alert in the event of an emergency. For example, if you are travelling to a location where internet access or mobile networks might be unreliable, consider subscribing to both an internet-based service (email, WhatsApp) as well as SMS. You'll be able change these options later.
+				<p>Selecting more than one option could help ensure you receive an alert in the event of an emergency.</p>
+				<p>If you're travelling to a location where internet access or mobile networks might be unreliable, consider subscribing to both an internet-based service (email, WhatsApp) as well as SMS.</p>
+				<p>You'll be able change these options later.</p>
 			</div>
 		</details>
 		<form class="form" method="post" action="channels_chosen">
