--- a/app/views/what_type_of_alert.html
+++ b/app/views/what_type_of_alert.html
@@ -19,105 +19,132 @@
 					  <h1 class="govuk-heading-xl">
 						  Which types of update are you interested in?
 					  </h1>
-					</legend>
-
-				  <div class="govuk-checkboxes">
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Emergency or incident in the country')%}
-							<input class="govuk-checkboxes__input" id="emergencyupdateonly" name="typeofalert" type="checkbox" value="Emergency or incident in the country" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="emergencyupdateonly" name="typeofalert" type="checkbox" value="Emergency or incident in the country">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="emergencyupdateonly">
-								Emergency or incident in the country
-							</label>
-						</div>
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Safety and security')%}
-							<input class="govuk-checkboxes__input" id="safetyandsecurity" name="typeofalert" type="checkbox" value="Safety and security" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="safetyandsecurity" name="typeofalert" type="checkbox" value="Safety and security">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="safetyandsecurity">
-								Safety and security
-							</label>
-						</div>
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Terrorism')%}
-							<input class="govuk-checkboxes__input" id="terrorism" name="typeofalert" type="checkbox" value="Terrorism" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="terrorism" name="typeofalert" type="checkbox" value="Terrorism">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="terrorism">
-								Terrorism
-							</label>
-						</div>
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Local laws and customs')%}
-							<input class="govuk-checkboxes__input" id="locallawsandcustoms" name="typeofalert" type="checkbox" value="Local laws and customs" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="locallawsandcustoms" name="typeofalert" type="checkbox" value="Local laws and customs">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="locallawsandcustoms">
-								Local laws and customs
-							</label>
-						</div>
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Entry requirements')%}
-							<input class="govuk-checkboxes__input" id="entryrequirements" name="typeofalert" type="checkbox" value="Entry requirements" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="entryrequirements" name="typeofalert" type="checkbox" value="Entry requirements">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="entryrequirements">
-								Entry requirements
-							</label>
-						</div>
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Health')%}
-							<input class="govuk-checkboxes__input" id="health" name="typeofalert" type="checkbox" value="Health" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="health" name="typeofalert" type="checkbox" value="Health">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="health">
-								Health
-							</label>
-						</div>
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Natural disaster')%}
-							<input class="govuk-checkboxes__input" id="naturaldisaster" name="typeofalert" type="checkbox" value="Natural disaster" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="naturaldisaster" name="typeofalert" type="checkbox" value="Natural disaster">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="naturaldisaster">
-								Natural disaster
-							</label>
-						</div>
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Money')%}
-							<input class="govuk-checkboxes__input" id="money" name="typeofalert" type="checkbox" value="Money" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="money" name="typeofalert" type="checkbox" value="Money">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="money">
-								Money
-							</label>
-						</div>
-						<div class="govuk-checkboxes__item">
-							{%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Travel advice help and support')%}
-							<input class="govuk-checkboxes__input" id="traveladvicehelpandsupport" name="typeofalert" type="checkbox" value="Travel advice help and support" checked>
-							{%else%}
-							<input class="govuk-checkboxes__input" id="traveladvicehelpandsupport" name="typeofalert" type="checkbox" value="Travel advice help and support">
-							{%endif%}
-							<label class="govuk-label govuk-checkboxes__label" for="traveladvicehelpandsupport">
-								Travel advice help and support
-							</label>
-						</div>
-					</div>
+				  </legend>
+			  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+				  <div class="govuk-checkboxes__item">
+					  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Emergency or incident in the country')%}
+					  <input class="govuk-checkboxes__input" id="emergencyupdateonly" name="typeofalert" type="checkbox" value="Emergency or incident in the country" checked>
+					  {%else%}
+					  <input class="govuk-checkboxes__input" id="emergencyupdateonly" name="typeofalert" type="checkbox" value="Emergency or incident in the country">
+					  {%endif%}
+					  <label class="govuk-label govuk-checkboxes__label" for="emergencyupdateonly">
+						  Emergency or incident in the country
+					  </label>
+				  </div>
+				  <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
+					   id="conditional-contact">
+					  <div class="govuk-form-group">
+						  <label class="govuk-label" for="emailAddress">
+							  Email address
+						  </label>
+						  <input class="govuk-input govuk-!-width-one-third" id="emailAddress" name="emailAddress"
+								 type="email" spellcheck="false" value="{{data['emailAddress']}}">
+					  </div>
+				  </div>
+				  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+					  <div class="govuk-checkboxes__item">
+						  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Travel advice')%}
+						  <input class="govuk-checkboxes__input" id="type-travel-advice" name="typeofalert" type="checkbox"
+								 value="Travel advice" data-aria-controls="conditional-contact-3" checked>
+						  {% else %}
+						  <input class="govuk-checkboxes__input" id="type-travel-advice" name="typeofalert" type="checkbox"
+								 value="Travel advice" data-aria-controls="conditional-contact-3">
+						  {% endif %}
+						  <label class="govuk-label govuk-checkboxes__label" for="type-travel-advice">
+							  Travel advice (select to choose categories)
+						  </label>
+					  </div>
+					  <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
+						   id="conditional-contact-3">
+						  <div class="govuk-form-group">
+							  <div class="govuk-checkboxes__item">
+								  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Safety and security')%}
+								  <input class="govuk-checkboxes__input" id="safetyandsecurity" name="typeofalert" type="checkbox" value="Safety and security" checked>
+								  {%else%}
+								  <input class="govuk-checkboxes__input" id="safetyandsecurity" name="typeofalert" type="checkbox" value="Safety and security">
+								  {%endif%}
+								  <label class="govuk-label govuk-checkboxes__label" for="safetyandsecurity">
+									  Safety and security
+								  </label>
+							  </div>
+							  <div class="govuk-checkboxes__item">
+								  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Terrorism')%}
+								  <input class="govuk-checkboxes__input" id="terrorism" name="typeofalert" type="checkbox" value="Terrorism" checked>
+								  {%else%}
+								  <input class="govuk-checkboxes__input" id="terrorism" name="typeofalert" type="checkbox" value="Terrorism">
+								  {%endif%}
+								  <label class="govuk-label govuk-checkboxes__label" for="terrorism">
+									  Terrorism
+								  </label>
+							  </div>
+							  <div class="govuk-checkboxes__item">
+								  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Local laws and customs')%}
+								  <input class="govuk-checkboxes__input" id="locallawsandcustoms" name="typeofalert" type="checkbox" value="Local laws and customs" checked>
+								  {%else%}
+								  <input class="govuk-checkboxes__input" id="locallawsandcustoms" name="typeofalert" type="checkbox" value="Local laws and customs">
+								  {%endif%}
+								  <label class="govuk-label govuk-checkboxes__label" for="locallawsandcustoms">
+									  Local laws and customs
+								  </label>
+							  </div>
+							  <div class="govuk-checkboxes__item">
+								  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Entry requirements')%}
+								  <input class="govuk-checkboxes__input" id="entryrequirements" name="typeofalert" type="checkbox" value="Entry requirements" checked>
+								  {%else%}
+								  <input class="govuk-checkboxes__input" id="entryrequirements" name="typeofalert" type="checkbox" value="Entry requirements">
+								  {%endif%}
+								  <label class="govuk-label govuk-checkboxes__label" for="entryrequirements">
+									  Entry requirements
+								  </label>
+							  </div>
+							  <div class="govuk-checkboxes__item">
+								  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Health')%}
+								  <input class="govuk-checkboxes__input" id="health" name="typeofalert" type="checkbox" value="Health" checked>
+								  {%else%}
+								  <input class="govuk-checkboxes__input" id="health" name="typeofalert" type="checkbox" value="Health">
+								  {%endif%}
+								  <label class="govuk-label govuk-checkboxes__label" for="health">
+									  Health
+								  </label>
+							  </div>
+							  <div class="govuk-checkboxes__item">
+								  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Natural disaster')%}
+								  <input class="govuk-checkboxes__input" id="naturaldisaster" name="typeofalert" type="checkbox" value="Natural disaster" checked>
+								  {%else%}
+								  <input class="govuk-checkboxes__input" id="naturaldisaster" name="typeofalert" type="checkbox" value="Natural disaster">
+								  {%endif%}
+								  <label class="govuk-label govuk-checkboxes__label" for="naturaldisaster">
+									  Natural disaster
+								  </label>
+							  </div>
+							  <div class="govuk-checkboxes__item">
+								  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Money')%}
+								  <input class="govuk-checkboxes__input" id="money" name="typeofalert" type="checkbox" value="Money" checked>
+								  {%else%}
+								  <input class="govuk-checkboxes__input" id="money" name="typeofalert" type="checkbox" value="Money">
+								  {%endif%}
+								  <label class="govuk-label govuk-checkboxes__label" for="money">
+									  Money
+								  </label>
+							  </div>
+							  <div class="govuk-checkboxes__item">
+								  {%if data['typeofalert'].length > 0 and data['typeofalert'].includes('Travel advice help and support')%}
+								  <input class="govuk-checkboxes__input" id="traveladvicehelpandsupport" name="typeofalert" type="checkbox" value="Travel advice help and support" checked>
+								  {%else%}
+								  <input class="govuk-checkboxes__input" id="traveladvicehelpandsupport" name="typeofalert" type="checkbox" value="Travel advice help and support">
+								  {%endif%}
+								  <label class="govuk-label govuk-checkboxes__label" for="traveladvicehelpandsupport">
+									  Travel advice help and support
+								  </label>
+							  </div>
+						  </div>
+					  </div>
+				  </div>
+			  </div>
 			  </fieldset>
 		  </div>
       <button class="govuk-button" data-module="govuk-button">Continue</button>
       </form>
-
     </div>
   </div>
 
