--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -32,13 +32,13 @@
           </dd>
         </div>
 		  {% endif %}
-		  {% if 'sms' in data['channels'] and data['phoneNumber'] %}
+		  {% if 'sms' in data['channels'] and data['phoneNumberSms'] %}
 		  <div class="govuk-summary-list__row">
 			  <dt class="govuk-summary-list__key">
 				  SMS
 			  </dt>
 			  <dd class="govuk-summary-list__value">
-				  <p class="govuk-body">{{data['phoneNumber']}}</p>
+				  <p class="govuk-body">{{data['phoneNumberSms']}}</p>
 			  </dd>
 			  <dd class="govuk-summary-list__actions">
 				  <a href="choose_channels">
