--- a/app/views/email_sms.html
+++ b/app/views/email_sms.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="govuk-checkboxes" data-module="govuk-checkboxes">
 						<div class="govuk-checkboxes__item">
-							{% if data['phoneNumber'] %}
+							{% if data['phoneNumberSms'] %}
 							<input class="govuk-checkboxes__input" id="contact-3" name="contact" type="checkbox"
 								   value="text message" data-aria-controls="conditional-contact-3" checked>
 							{% else %}
@@ -58,8 +58,8 @@
 								<div id="telephone-number-hint" class="govuk-hint">
 									For international numbers include the country code eg 001
 								</div>
-								<input class="govuk-input govuk-!-width-one-third" id="phoneNumber" name="phoneNumber"
-									   type="tel" value="{{data['phoneNumber']}}" aria-describedby="telephone-number-hint" autocomplete="tel">
+								<input class="govuk-input govuk-!-width-one-third" id="phoneNumberSms" name="phoneNumberSms"
+									   type="tel" value="{{data['phoneNumberSms']}}" aria-describedby="telephone-number-hint" autocomplete="tel">
 							</div>
 						</div>
 					</div>
