--- a/app/views/british-national.html
+++ b/app/views/british-national.html
@@ -12,7 +12,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
-      <form class="form" action="is-british-national" method="post">
+      <form class="form" action="country" method="post">
 		  <div class="govuk-form-group">
 			  <fieldset class="govuk-fieldset" aria-describedby="british-national-hint">
 				  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -20,18 +20,16 @@
 						  Are you a British national?
 					  </h1>
 				  </legend>
-				  <div id="british-national-hint" class="govuk-hint">
-					This service is for British nationals only. Please confirm before continuing.
-				  </div>
 				  <div class="govuk-radios govuk-radios--inline">
+
 					  <div class="govuk-radios__item">
-						  <input class="govuk-radios__input" id="british-national" name="is-british-national" type="radio" value="yes">
+						  <input class="govuk-radios__input" id="british-national" name="isBritishNational" type="radio" value="yes" {% if data['isBritishNational'] === 'yes' %}checked{% endif %}>
 						  <label class="govuk-label govuk-radios__label" for="british-national">
 							  Yes
 						  </label>
 					  </div>
 					  <div class="govuk-radios__item">
-						  <input class="govuk-radios__input" id="british-national-2" name="is-british-national" type="radio" value="no">
+						  <input class="govuk-radios__input" id="british-national-2" name="isBritishNational" type="radio" value="no" {% if data['isBritishNational'] === 'no' %}checked{% endif %}>
 						  <label class="govuk-label govuk-radios__label" for="british-national-2">
 							  No
 						  </label>
