--- a/app/views/how_often_email.html
+++ b/app/views/how_often_email.html
@@ -31,7 +31,7 @@
                           {%else%}
                           <input class="govuk-radios__input" id="onceaday" name="howoftenemail" type="radio" value="Once a day">
                           {% endif %}
-						  <label class="govuk-label govuk-radios__label" for="british-national">
+						  <label class="govuk-label govuk-radios__label" for="onceaday">
 							  Once a day
 						  </label>
 					  </div>
@@ -41,7 +41,7 @@
                           {%else%}
                           <input class="govuk-radios__input" id="onceaweek" name="howoftenemail" type="radio" value="Once a week">
                           {%endif%}
-						  <label class="govuk-label govuk-radios__label" for="british-national-2">
+						  <label class="govuk-label govuk-radios__label" for="onceaweek">
 							  Once a week
 						  </label>
                       </div>
@@ -52,7 +52,7 @@
                         {%else%}
                         <input class="govuk-radios__input" id="eachupdate" name="howoftenemail" type="radio" value="Each add and update">
                         {%endif%}
-                        <label class="govuk-label govuk-radios__label" for="british-national-2">
+                        <label class="govuk-label govuk-radios__label" for="eachupdate">
                             Each time we add or update a page (you may get more than one update a day)
                         </label>
                     </div>
