--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -22,8 +22,8 @@
 					Status
 				</dt>
 				<dd class="govuk-summary-list__value">
-					<p class="govuk-body">{% if data['isBritishNational'] === 'yes' %}British National{% else %}
-						non-British National
+					<p class="govuk-body">{% if data['isBritishNational'] === 'yes' %}British national{% else %}
+						non-British national
 						{% endif %}</p>
 				</dd>
 				<dd class="govuk-summary-list__actions">
