--- a/app/views/intro.html
+++ b/app/views/intro.html
@@ -37,11 +37,11 @@
 
 
 		<ul class="govuk-list govuk-list--bullet">
-			<li>Coronavirus</li>
-			<li>Safety and security</li>
-			<li>Entry requirements</li>
-			<li>Travel warnings</li>
-			<li>Emergency or incident in the country</li>
+			<li>coronavirus</li>
+			<li>safety and security</li>
+			<li>entry requirements</li>
+			<li>travel warnings</li>
+			<li>emergency or incident in the country</li>
 		</ul>
 
       <a href="british-national" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
