--- a/app/views/when_do_you_want_to.html
+++ b/app/views/when_do_you_want_to.html
@@ -21,10 +21,11 @@
             <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h1 class="govuk-heading-xl">
-                  Optional - When do you want to stop receiving travel updates?
+                  When do you want to stop receiving travel updates?
                 </h1>
               </legend>
 
+				<p>If you do not wish to stop receiving travel updates, leave the end date blank and press continue.</p>
 				<p>You'll also be able to unsubscribe at any time, instructions will be in every update you're sent.</p>
              <div class="govuk-date-input" id="passport-issued">
                 <div class="govuk-date-input__item">
