--- a/app/views/what_type_of_alert.html
+++ b/app/views/what_type_of_alert.html
@@ -41,7 +41,7 @@
 								 value="Travel advice" data-aria-controls="conditional-contact-3">
 						  {% endif %}
 						  <label class="govuk-label govuk-checkboxes__label" for="type-travel-advice">
-							  Travel advice
+							  Travel advice updates when the page changes
 						  </label>
 					  </div>
 					  <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
