--- a/app/views/choose_channels.html
+++ b/app/views/choose_channels.html
@@ -11,19 +11,9 @@
 		<h1 class="govuk-heading-xl">
 			How would you like to receive travel updates?
 		</h1>
-
-		<details class="govuk-details" data-module="govuk-details">
-			<summary class="govuk-details__summary">
-				<span class="govuk-details__summary-text">
-				  Consider selecting more than one
-				</span>
-			</summary>
-			<div class="govuk-details__text">
 				<p>Selecting more than one option could help ensure you receive an alert in the event of an emergency.</p>
-				<p>If you're travelling to a location where internet access or mobile networks might be unreliable, consider subscribing to both an internet-based service (email, WhatsApp) as well as SMS.</p>
-				<p>You'll be able change these options later.</p>
-			</div>
-		</details>
+				<p>For example, if you're travelling to a location where internet access or mobile networks might be unreliable, consider subscribing to both an internet-based service (email, WhatsApp) as well as SMS.</p>
+		<br />
 		<form class="form" method="post" action="check-your-answers">
 			<div class="govuk-form-group">
 				<div class="govuk-checkboxes" data-module="govuk-checkboxes">
