Add link to emergency alert, to confirmation

--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -35,6 +35,15 @@
 		<img src="/public/images/vonage-qr-whatsapp.png" />
 		</p>
 		{% endif %}
+
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<hr>
+		<a href="https://fcdo-sms-subscriber.herokuapp.com/"><small>[for user testing - example of an alert]</small></a>
     </div>
   </div>
 
