--- a/app/views/index.html
+++ b/app/views/index.html
@@ -119,120 +119,64 @@
 						</ol>
 					</nav>
 				</nav>
-
-
-				<div class="travel-advice-notice">
-					<div class="travel-advice-notice__header">
-
-						<div id="warning-text-577ee2bf" class="gem-c-warning-text govuk-warning-text">
-
-							<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
-								<span class="govuk-warning-text__assistive">Important</span>		<svg xmlns="http://www.w3.org/2000/svg" width="21" height="15.75" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M19.687 0H1.312C.589 0 0 .587 0 1.313v13.124c0 .726.588 1.313 1.313 1.313h18.374c.725 0 1.313-.587 1.313-1.313V1.313C21 .587 20.412 0 19.687 0zm-2.625 2.625L10.5 7.875l-6.563-5.25h13.126zm1.313 10.5H2.625V3.937L10.5 10.5l7.875-6.563v9.188z"></path></svg>
-								Sign up for travel updates
-
-							</h2>
-						</div>
-					</div>
-					<div class="travel-advice-notice__content">
-						<p class="govuk-body">
-							<a href="/add_country?countryToAdd=Myanmar">Stay up to date with information and advice.</a>
-						</p>
-					</div>
-				</div>
-<!--				<section class="gem-c-subscription-links ">-->
-<!--					<h2 class="gem-c-subscription-links__hidden-header visuallyhidden">Subscriptions</h2>-->
-<!--					<ul class="gem-c-subscription-links__list">-->
-<!--						<li class="gem-c-subscription-links__list-item">-->
-<!--							<a class="gem-c-subscription-links__item  gem-c-subscription-links__item&#45;&#45;link" href="/foreign-travel-advice/myanmar/email-signup">           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="15.75" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M19.687 0H1.312C.589 0 0 .587 0 1.313v13.124c0 .726.588 1.313 1.313 1.313h18.374c.725 0 1.313-.587 1.313-1.313V1.313C21 .587 20.412 0 19.687 0zm-2.625 2.625L10.5 7.875l-6.563-5.25h13.126zm1.313 10.5H2.625V3.937L10.5 10.5l7.875-6.563v9.188z"></path></svg>-->
-<!--								Get emails-->
-<!--							</a>-->
-<!--						</li>-->
-
-<!--						<li class="gem-c-subscription-links__list-item">-->
-
-<!--							<a class="gem-c-subscription-links__item  gem-c-subscription-links__item&#45;&#45;link" href="/foreign-travel-advice/myanmar.atom">            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="gem-c-subscription-links__icon" focusable="false" fill="currentColor" aria-hidden="true"><path d="M1.996 11A2 2 0 0 0 0 12.993c0 1.101.895 1.99 1.996 1.99 1.106 0 2-.889 2-1.99a2 2 0 0 0-2-1.993zM.002 5.097V7.97c1.872 0 3.632.733 4.958 2.059A6.984 6.984 0 0 1 7.015 15h2.888c0-5.461-4.443-9.903-9.9-9.903zM.006 0v2.876c6.676 0 12.11 5.44 12.11 12.124H15C15 6.731 8.273 0 .006 0z"></path></svg>-->
-<!--								Subscribe to feed-->
-<!--							</a>-->
-<!--						</li>-->
-<!--					</ul>-->
-
-<!--				</section>-->
 			</aside>
-		</div>
-	</div>
-
-	<div class="govuk-grid-row">
-		<div class="govuk-grid-column-two-thirds">
 			<h1 class="part-title">
 				Summary
 			</h1>
-
-
 			<div class="gem-c-metadata" data-module="gem-toggle">
 				<dl data-module="track-click">
 					<dt class="gem-c-metadata__term">Still current at:</dt>
 					<dd class="gem-c-metadata__definition">
-						10 February 2021
+						19 February 2021
 
 					</dd>
 					<dt class="gem-c-metadata__term">Updated:</dt>
 					<dd class="gem-c-metadata__definition">
-						9 February 2021
+						17 February 2021
 
 					</dd>
 					<dt class="gem-c-metadata__term">Latest update:</dt>
 					<dd class="gem-c-metadata__definition">
-						<p>New information on the closure of airports and suspension of all domestic and international commercial passenger flights until 31st May 2021 at the earliest ('Summary', 'Coronavirus' and 'Entry requirements' pages).  Addition of contact numbers for people in Myanmar who need urgent help and addition of a number for people in the UK who are worried about a British national in Myanmar ('Summary' page).</p>
+						<p>Updated information on leaving Myanmar by commercial means if you have concerns for your safety (See  'Return to UK')</p>
 
 					</dd>
 				</dl>
 			</div>
 			<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
+				<p>
+					<strong>The Foreign, Commonwealth & Development Office (FCDO) advises against all but essential travel across Myanmar, based on recent political events and the current assessment of the COVID-19 risk.</strong> If you have concerns for your safety in the current situation, you should consider leaving Myanmar by commercial means. <a href="https://www.gov.uk/foreign-travel-advice/myanmar/return-to-the-uk">See Return to UK</a>.</p>
+			</div>
+			<div class="travel-advice-notice">
+				<div class="travel-advice-notice__header">
 
-				<p><strong>The Foreign, Commonwealth &amp; Development Office (<abbr title="Foreign, Commonwealth &amp; Development Office">FCDO</abbr>) advises against all but essential travel across Myanmar, based on recent political events and the current assessment of the COVID-19 risk.</strong></p>
-
-				<p>As of 1 February, the Myanmar Military have declared a state of emergency and assumed control. There are reports that figures in the Civilian Government and civil society have been detained by the military.  The British Embassy is following the situation carefully and will continue to update the Travel Advice.  There may be disruptions to internet, phone networks and ATMs. You are advised to stay home and stay safe. If you need to collect essential provisions, you should do so quickly and avoiding crowds.</p>
-
-				<p>If you’re in Myanmar and you need urgent help (for example, you’ve been attacked, arrested or someone has died), use one of the following numbers:</p>
-
-				<ul>
-					<li>+95 (01) 370863</li>
-					<li>+95 (01) 370864</li>
-					<li>+95 (01) 370865</li>
-					<li>+95 (01) 370867</li>
-				</ul>
-
-				<p>Please be aware that there may be disruptions to phone networks.</p>
-
-				<p>If you’re in the UK and worried about a British national in Myanmar, call 020 7008 1500.</p>
-
-				<div class="call-to-action">
-					<div role="note" aria-label="Warning" class="application-notice help-notice">
-						<p>Travel to Myanmar is subject to entry restrictions</p>
+					<div id="warning-text-577ee2bf" class="gem-c-warning-text govuk-warning-text">
+						<span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+						<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
+							<span class="govuk-warning-text__assistive">Important</span>
+							There is an ongoing incident in Myanmar
+						</h2>
 					</div>
-
-					<ul>
-						<li>The military have directed airports to close and suspended all domestic and international commercial passenger flights until 31 May 2021 at the earliest</li>
-						<li>Residents of the United Kingdom, or those who have visited the United Kingdom within the previous 14 days, are currently unable to enter Myanmar.</li>
-						<li>Arrivals must comply with Myanmar’s COVID-19 quarantine requirements.</li>
-					</ul>
-
-					<p>See <a href="/foreign-travel-advice/myanmar/entry-requirements">Entry requirements</a> for more information before you plan to travel.</p>
-
-					<div role="note" aria-label="Warning" class="application-notice help-notice">
-						<p>Preparing for your return journey to the UK</p>
-					</div>
-
-					<p>If you’re returning to the UK from overseas, you will need to:</p>
-
-					<ul>
-						<li>
-							<a href="/provide-journey-contact-details-before-travel-uk">provide your journey and contact details</a> before you travel</li>
-						<li><a href="/uk-border-control">check if you need to self-isolate on your return</a></li>
-					</ul>
 				</div>
+				<div class="travel-advice-notice__content">
+					<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
+						<p>
+							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?sort=desc">See all alerts</a> for this incident.
+						</p>
+					<p>
+						<a href="/add_country?countryToAdd=Myanmar">Sign up to receive alerts</a> via email / SMS.
+					</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-				<p>Check our <a href="/guidance/travel-advice-novel-coronavirus">advice on foreign travel during the coronavirus (COVID-19) pandemic</a> and <a href="/foreign-travel-advice/myanmar/email-signup">sign up for email alerts</a> for this travel advice.</p>
+	<div class="govuk-grid-row">
+		<div class="govuk-grid-column-two-thirds">
+
+			<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
+
+				<p>Check our <a href="/guidance/travel-advice-novel-coronavirus">advice on foreign travel during the coronavirus (COVID-19) pandemic</a> and <a href="/add_country?countryToAdd=Myanmar">sign up to receive travel updates</a>.</p>
 
 				<p>If you’re planning travel to Myanmar, find out what you need to know about coronavirus there in the <a href="/foreign-travel-advice/myanmar/coronavirus">Coronavirus section</a>.</p>
 
