--- a/app/views/index.html
+++ b/app/views/index.html
@@ -153,7 +153,7 @@
 						<span class="govuk-warning-text__icon" aria-hidden="true">!</span>
 						<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
 							<span class="govuk-warning-text__assistive">Important</span>
-							There is an ongoing incident in Myanmar
+							There is an ongoing situation in Myanmar after the military coup on 1st Feb 2021
 						</h2>
 					</div>
 				</div>
@@ -163,7 +163,7 @@
 							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?sort=desc">See all alerts</a> for this incident.
 						</p>
 					<p>
-						<a href="/add_country?countryToAdd=Myanmar">Sign up to receive alerts</a> via email / SMS.
+						<a href="/add_country?countryToAdd=Myanmar">Sign up to receive alerts and the latest information</a> by email and SMS.
 					</p>
 					</div>
 				</div>
@@ -175,6 +175,44 @@
 		<div class="govuk-grid-column-two-thirds">
 
 			<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
+				<p>As of 1 February, the Myanmar Military have declared a state of emergency and assumed control. There are reports that figures in the Civilian Government, civil society and a foreign national have been detained by the military. The British Embassy is following the situation carefully and will continue to update the Travel Advice. The military has shut down access to various internet platforms and reports of disruptions to wider internet, phone networks and ATMs are widespread.  You are advised to stay home and stay safe. If you need to collect essential provisions, you should do so quickly and avoiding crowds. There is a nationwide curfew imposed between 8pm and 4am until further notice.</p>
+				<p>If you’re in Myanmar and you need urgent help, use one of the following numbers:</p>
+				<ul>
+					<li>+95 (01) 370863</li>
+					<li>+95 (01) 370864</li>
+					<li>+95 (01) 370865</li>
+					<li>+95 (01) 370867</li>
+				</ul>
+				<p>Please be aware that there may be disruptions to phone networks.</p>
+				<p>If you’re in the UK and worried about a British national in Myanmar, call 020 7008 1500.</p>
+				<p>The military have suspended all scheduled international commercial passenger flights until 31 May 2021. However, the British Embassy understands that some services will be available. See <a href="/foreign-travel-advice/myanmar/return-to-the-uk#flights">Flights</a> for more information on commercial options leaving Myanmar. Land borders are closed.</p>
+				<p>If you wish to return to the UK from Myanmar, you should <a href="/foreign-travel-advice/myanmar/return-to-the-uk#your-journey-home-before-you-leave-myanmar">check what you need to do before leaving to meet UK entry requirements</a>.</p>
+
+				<div class="call-to-action">
+					<div role="note" aria-label="Warning" class="application-notice help-notice">
+						<p>Travel to Myanmar is subject to entry restrictions</p>
+					</div>
+
+					<ul>
+						<li>The military have directed airports to close and suspended international commercial passenger flights until 31 May 2021 at the earliest</li>
+						<li>Residents of the United Kingdom, or those who have visited the United Kingdom within the previous 14 days, are currently unable to enter Myanmar.</li>
+						<li>Arrivals must comply with Myanmar’s COVID-19 quarantine requirements.</li>
+					</ul>
+
+					<p>See <a href="/foreign-travel-advice/myanmar/entry-requirements">Entry requirements</a> for more information before you plan to travel.</p>
+
+					<div role="note" aria-label="Warning" class="application-notice help-notice">
+						<p>Preparing for your return journey to the UK</p>
+					</div>
+
+					<p>If you’re returning to the UK from overseas, you will need to:</p>
+
+					<ul>
+						<li>
+							<a href="/provide-journey-contact-details-before-travel-uk">provide your journey and contact details</a> before you travel</li>
+						<li><a href="/uk-border-control">check if you need to self-isolate on your return</a></li>
+					</ul>
+				</div>
 
 				<p>Check our <a href="/guidance/travel-advice-novel-coronavirus">advice on foreign travel during the coronavirus (COVID-19) pandemic</a> and <a href="/add_country?countryToAdd=Myanmar">sign up to receive travel updates</a>.</p>
 
