Simpler WhatsApp subscription

--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -96,7 +96,8 @@
 				  WhatsApp
 			  </dt>
 			  <dd class="govuk-summary-list__value">
-				  <p class="govuk-body">To complete your subscription, follow the instructions after you click Confirm</p>
+				  <p class="govuk-body">{{data['phoneNumberWhatsApp']}}</p>
+			  </dd>
 			  </dd>
 			  <dd class="govuk-summary-list__actions">
 				  <a href="choose_channels">
