--- a/app/views/choose_channels.html
+++ b/app/views/choose_channels.html
@@ -79,7 +79,16 @@
 					</div>
 					<div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
 						 id="conditional-whatsapp">
-						<p>To complete subscription for WhatsApp messages you'll need to do an extra step - we'll show you details later on.</p>
+						<div class="govuk-form-group">
+							<label class="govuk-label" for="phoneNumberWhatsApp">
+								Mobile phone number
+							</label>
+							<div id="phone-whatsapp-hint" class="govuk-hint">
+								For international numbers include the country code
+							</div>
+							<input class="govuk-input govuk-!-width-one-third" id="phoneNumberWhatsApp" name="phoneNumberWhatsApp"
+								   type="tel" value="{{data['phoneNumberWhatsApp']}}" aria-describedby="phone-whatsapp-hint" autocomplete="tel">
+						</div>
 					</div>
 				</div>
 			</div>
