Link to travel advice from email verified page

--- a/app/views/email-verified.html
+++ b/app/views/email-verified.html
@@ -17,8 +17,8 @@
 
 		{%if data['typeofalert'].includes('Emergency or incident in the country')%}
 		<h2 class="govuk-heading-m">What happens next</h2>
-		<p>When the FCDO is made aware of an emergency in the area you have subscribed to you will receive an alert by your chosen method(s).</p>
-		<p>You may also receive guidance about how to access an emergency flight to return to the UK.</p>
+		<p>When the FCDO is made aware of an emergency in a country you have subscribed to, you will receive an alert by email.</p>
+		<p>You can also access up-to-date travel advice for each country at <a href="https://www.gov.uk/foreign-travel-advice">https://www.gov.uk/foreign-travel-advice</a></p>
 			{% endif %}
     </div>
   </div>
