--- a/app/views/email-verified.html
+++ b/app/views/email-verified.html
@@ -11,7 +11,7 @@
 
         <h1 class="govuk-panel__title">Thanks for confirming your email address</h1>
 
-		<p>You're now subscribed by email to travel updates for {{data['countries']}}.</p>
+		<p>You're now subscribed by email to travel updates for {{data['countryList']}}.</p>
 
 		<p>The emails will be sent to {{data['email']}}</p>
 
