--- a/app/views/email-verified.html
+++ b/app/views/email-verified.html
@@ -15,7 +15,7 @@
 
 		<p>The emails will be sent to {{data['email']}}</p>
 
-		{%if data['typeofalert'].includes('Emergency or incident in the country')%}
+		{%if data['typeofalert'].includes('Emergency alerts')%}
 		<h2 class="govuk-heading-m">What happens next</h2>
 		<p>When the FCDO is made aware of an emergency in a country you have subscribed to, you will receive an alert by email.</p>
 		<p>You can also access up-to-date travel advice for each country at <a href="https://www.gov.uk/foreign-travel-advice">https://www.gov.uk/foreign-travel-advice</a></p>
