--- a/app/views/country.html
+++ b/app/views/country.html
@@ -12,7 +12,7 @@
 			Which countries or territories do you want to receive travel updates for?
 		</h1>
 		{% if data['countries'] and data['countries'].length %}
-		<form id="countryList" class="form" method="post" action="what_type_of_alert">
+		<form id="countryList" class="form" method="post" action="types-of-alert">
 			<div class="govuk-form-group">
 				<fieldset class="govuk-fieldset" aria-describedby="waste-hint">
 					<legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
