--- a/app/views/travel-updates-email.html
+++ b/app/views/travel-updates-email.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-three-quarters">
 		<h1 class="govuk-heading-xl">
-			Your email address for travel advice page updates
+			What is your email address for travel advice page updates?
 		</h1>
 		<form class="form" method="post" action="travel-updates-email-submit">
 			<div class="govuk-form-group">
