Don't default emergency alerts email

--- a/app/views/choose-channels.html
+++ b/app/views/choose-channels.html
@@ -39,7 +39,7 @@
 								Use an email account that you'll be able to access easily while you're travelling
 							</div>
 							<input class="govuk-input govuk-!-width-one-third" id="emailAddress" name="emailAddress"
-								   type="email" spellcheck="false" value="{{data.emailAddress or data.emailAddressTravelAdvice}}">
+								   type="email" spellcheck="false" value="{{data.emailAddress}}">
 						</div>
 					</div>
 					<div class="govuk-checkboxes" data-module="govuk-checkboxes">
