Add Kenya TA page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -160,7 +160,7 @@
 				<div class="travel-advice-notice__content">
 					<div class="gem-c-govspeak govuk-govspeak direction-ltr" data-module="govspeak">
 						<p>
-							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?sort=desc">See all alerts</a> for this incident.
+							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?country=Myanmar&sort=desc">See all alerts</a> for this incident.
 						</p>
 					<p>
 						<a href="/add_country?countryToAdd=Myanmar">Sign up to receive alerts and the latest information</a> by email and SMS.
