Update Kenya TA dates

--- a/app/views/kenya.html
+++ b/app/views/kenya.html
@@ -161,17 +161,17 @@
 				<dl data-module="gem-track-click">
 					<dt class="gem-c-metadata__term">Still current at:</dt>
 					<dd class="gem-c-metadata__definition">
-						10 March 2021
+						15 January 2019
 
 					</dd>
 					<dt class="gem-c-metadata__term">Updated:</dt>
 					<dd class="gem-c-metadata__definition">
-						18 February 2021
+						15 January 2019
 
 					</dd>
 					<dt class="gem-c-metadata__term">Latest update:</dt>
 					<dd class="gem-c-metadata__definition">
-						<p>Information about COVID-19 vaccines if you live in Kenya ('Coronavirus' page)</p>
+						<p>Ongoing security incident in Nairobi</p>
 
 					</dd>
 				</dl>
