Accessibility - back links, page titles

--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Check your answers
+Confirm your choices - gov.uk
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="choose-channels">Back</a>
+  <a class="govuk-back-link" href="choose-channels">Back<span class="govuk-visually-hidden"> to When do you want to stop receiving updates?</span></a>
 {% endblock %}
 
 {% block content %}
