--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Confirmation page
+Your subscription - gov.uk
 {% endblock %}
+
 
 {% block content %}
 
@@ -45,5 +46,4 @@
 		<a href="https://fcdo-sms-subscriber.herokuapp.com/"><small>[for user testing - example of an alert]</small></a>
     </div>
   </div>
-
 {% endblock %}
