--- a/app/views/end-date-for-alerts.html
+++ b/app/views/end-date-for-alerts.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Question page
+When do you want to stop receiving updates? - gov.uk
 {% endblock %}
 
 {% block beforeContent %}
-        <a class="govuk-back-link" href="types-of-alert">Back</a>
+        <a class="govuk-back-link" href="types-of-alert">Back<span class="govuk-visually-hidden"> to Enter email address for travel advice page updates</span></a>
 {% endblock %}
 
 {% block content %}
@@ -14,21 +14,18 @@
     <div class="govuk-grid-column-three-quarters">
       <form class="form" action="check-your-answers" method="post">
         <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
+            <fieldset class="govuk-fieldset" role="group" aria-describedby="hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h1 class="govuk-heading-xl">
                   When do you want to stop receiving updates?
                 </h1>
               </legend>
-
 				<p>If you do not wish to stop receiving updates, leave the end date blank and press continue.</p>
 				<p>You'll also be able to unsubscribe at any time, instructions will be in every update you're sent.</p>
+				<div id="hint" class="govuk-hint">
+					Enter the day, month and year as numbers, for example, 27 3 2007
+				</div>
              <div class="govuk-date-input" id="passport-issued">
-                <div class="govuk-date-input__item">
-                    <div class="govuk-form-group">
-                    <label class="govuk-label govuk-date-input__label">End date: </label>
-                    </div>
-                </div>
                 <div class="govuk-date-input__item">
                   <div class="govuk-form-group">
                     <label class="govuk-label govuk-date-input__label" for="day">
@@ -60,5 +57,4 @@
 
     </div>
   </div>
-
 {% endblock %}
