--- a/app/views/travel-updates-email.html
+++ b/app/views/travel-updates-email.html
@@ -1,9 +1,11 @@
 {% extends "layout.html" %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="types-of-alert">Back</a>
+<a class="govuk-back-link" href="types-of-alert">Back<span class="govuk-visually-hidden"> to Types of alert</span></a>
 {% endblock %}
-
+{% block pageTitle %}
+What is your email address for travel advice page updates? - gov.uk
+{% endblock %}
 {% block content %}
 
 <div class="govuk-grid-row">
