--- a/app/views/british-national.html
+++ b/app/views/british-national.html
@@ -1,15 +1,14 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Question page
+Are you a British national? - gov.uk
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="intro">Back</a>
+  <a class="govuk-back-link" href="intro">Back<span class="govuk-visually-hidden"> to start page</span></a>
 {% endblock %}
 
 {% block content %}
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters">
       <form class="form" action="country" method="post">
@@ -44,5 +43,4 @@
 
     </div>
   </div>
-
 {% endblock %}
