--- a/app/views/country.html
+++ b/app/views/country.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="british-national">Back</a>
+<a class="govuk-back-link" href="british-national">Back<span class="govuk-visually-hidden"> to Are you a British National?</span></a>
+{% endblock %}
+
+{% block pageTitle %}
+Which countries or territories do you want to receive travel updates for? - gov.uk
 {% endblock %}
 
 {% block content %}
