--- a/app/views/types-of-alert.html
+++ b/app/views/types-of-alert.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Question page
+Which types of update do you want to receive? - gov.uk
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="country">Back</a>
+<a class="govuk-back-link" href="country">Back<span class="govuk-visually-hidden"> to Choose a country</span></a>
 {% endblock %}
 
 {% block content %}
@@ -51,5 +51,4 @@
       </form>
     </div>
   </div>
-
 {% endblock %}
