Separate subscribe route for emergency alerts

--- a/app/views/option2.html
+++ b/app/views/option2.html
@@ -223,7 +223,7 @@
 					</ul>
 				</div>
 
-				<p>Check our <a href="/guidance/travel-advice-novel-coronavirus">advice on foreign travel during the coronavirus (COVID-19) pandemic</a> and <a href="/add_country?countryToAdd=Myanmar">sign up to receive travel updates</a>.</p>
+				<p>Check our <a href="/guidance/travel-advice-novel-coronavirus">advice on foreign travel during the coronavirus (COVID-19) pandemic</a> and <a href="/add_country?countryToAdd=Myanmar&emergency=true">sign up to receive travel updates</a>.</p>
 
 				<p>If you’re planning travel to Myanmar, find out what you need to know about coronavirus there in the <a href="/foreign-travel-advice/myanmar/coronavirus">Coronavirus section</a>.</p>
 
