--- a/app/views/includes/alert-subscribe-box.html
+++ b/app/views/includes/alert-subscribe-box.html
@@ -16,7 +16,7 @@
 			<!--							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?country=Myanmar&sort=desc">See all alerts</a> for this incident.-->
 			<!--						</p>-->
 			<p>
-				<a href="/add_country?countryToAdd=Myanmar">Sign up to receive alerts and the latest information</a> by email and SMS.
+				<a href="/add_country?countryToAdd=Myanmar&emergency=true">Sign up to receive alerts and the latest information</a> by email and SMS.
 			</p>
 			<p><a class="gem-c-subscription-links__item  gem-c-subscription-links__item--link" href="/foreign-travel-advice/myanmar/email-signup">
 				Get emails when this page changes.
