Tweak options / add peacetime versions

--- a/app/views/option1.html
+++ b/app/views/option1.html
@@ -206,7 +206,7 @@
 <!--							<a href="https://fcdo-sms-subscriber.herokuapp.com/alert-history?country=Myanmar&sort=desc">See all alerts</a> for this incident.-->
 <!--						</p>-->
 						<p>
-							<a href="/add_country?countryToAdd=Myanmar&emergency=true">Sign up to receive alerts and the latest information</a> by email and SMS.
+							<a href="/add_country?countryToAdd=Myanmar&emergency=true">Sign up to receive emergency travel alerts by email and SMS.</a>
 						</p>
 					</div>
 				</div>
